﻿Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

### 2018-05-16
	Changed: `Increase` and `Decrease` options in `Watchlist.ini` are now `Priority strategy` with values from 0 to 3.
		0 = Ignore/Unset, 1 = Increase only, 2 = Decrease only, 3 = Force/bidirectional
		Upgrading to new settings should happen automatically for now.
	Added: Foreground app hang detector.
	Changed: Resize&reposition uses `Resize strategy` option instead of `Remember size` and `Remember position`.
		0 = None, 1 = Size, 2 = Position, 3 = Both
		Upgrading to new settings should happen automatically for now.
	Fixed: Resize & reposition settings should no longer reset to 0 under certain circumstances.
	Fixed: Uncaught error in app hang detector.
### 2018-05-15
	Fixed: Crash in watchlist rule editor if the affinity checkboxes were used.
	Changed: Internal restructuring, removed PostSharp usage due to its interfererence with build process. Should have no effect for end users.
### 2018-05-13
	Changed: Remember window sizes and positions works a little differently.
	Added: More debug output
	Changed: Affinity setting no longer increases the number of allowed cores. This may later become configurable to allow increasing them.
### 2018-05-12
	Changed: Explorer crash handling. Should be less convinced about explorer crashes when no such thing happened.
### 2018-05-11
	Changed: CPU sampling is simplified. May run better or worse.
	Changed: Debugging for health monitor low memory functionality.
	Changed: Health monitor memory option now respects the more general paging option.
### 2018-05-09
	Fixed: Network tab packet&error deltas were not functioning.
	Changed: Attempt to color errors in UI log.
### 2018-05-07
	Fixed: Apparently Task.Wait() hangs indefinitely under some obscure circumstances. Caused manual power mode to deadlock?
	Fixed: All CPUs mask was messed up.
	Changed: Power auto-adjust default configuration changed a tiny bit.